@@ -444,6 +444,20 @@ this repository contains the full copyright notices and license terms. -->
             <field name="action" ref="wizard_return_sale"/>
         </record>
 
+        <record model="ir.action.wizard" id="wizard_modify_header">
+            <field name="name">Modify Header</field>
+            <field name="wiz_name">sale.modify_header</field>
+            <field name="model">sale.sale</field>
+        </record>
+        <record model="ir.ui.view" id="modify_header_form">
+            <field name="model">sale.sale</field>
+            <field name="inherit" ref="sale.sale_view_form"/>
+            <field name="name">modify_header_form</field>
+            <field name="domain"
+                eval="Eval('context', {}).get('modify_header', False)"
+                pyson="1"/>
+        </record>
+
         <record model="ir.rule.group" id="rule_group_sale">
             <field name="model" search="[('model', '=', 'sale.sale')]"/>
             <field name="global_p" eval="True"/>
